2005-09-26  Martyn Gigg  <m.a.gigg@dur.ac.uk>

	* Decay/MamboDecayer.cc (Repository): Added MamboDecayer

2005-09-23  David Grellscheid <David.Grellscheid@durham.ac.uk>

	* */*.h, */Makefile.am, src/*.in: Restructuring of libraries to
	clean up dependencies. Many parts turned into modules.
	make clean && make recommended.

2005-09-22  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* Shower/*, UnderlyingEvent/*, lib/Makefile.am,
	src/UnderlyingEvent.in, src/Shower.in: Turned Shower and UA5 into
	modules.
	
	* src/LEPbb.in, src/HerwigDefaults.in, lib/Makefile.am, 
	MatrixElement/*: Turned HwME.so into a module.

	* Decay/*, PDF/*, PDT/*: bugfixes and warning eliminations from
	-Wshadow 

2005-09-21  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* Helicity/Vertex/RSModel/RSModel*Vertex.h: modified the library()
	lines to take care of dependency on HwRSModel.so


2005-09-21  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Decay/Partonic/BtoSGammaDecayer.h (Repository): minor fixes and
	cleanup of b to s gamma code 

	* Hadronization/PartonicHadronizer.cc (Repository): bug fix to
	solve problems when vetoing hadronization if intermediates removed 

2005-09-19  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* PDF/*: Removed obsolete MRST99_1.*, renamed MRST.so to HwMRST.so

	* Helicity/Vertex/RSModel/*, Models/RSModel/*: Made RS model
	dynamically loadable.
	
2005-09-19  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Utilities/Interpolator.cc (Repository): minor bug fixes

	* Hadronization/PartonicHadronizer.cc (Repository): minor bug fixes

	* Utilities/Math.h (Repository): added math namesapce for mathematical
	functions and included the dilog from FORTRAN HERWIG.

2005-09-15  David Grellscheid <David.Grellscheid@durham.ac.uk>

	* ** multiple files **: small changes to reduce compile warnings 
	when extra warning flags are enabled.

2005-09-15  Pete's account  <Peter.Richardson@durham.ac.uk>
